--- a/12 - Code Quality with ESLint/.eslintrc
+++ b/12 - Code Quality with ESLint/.eslintrc
@@ -1,12 +1,9 @@
 {
-  "env": {
+  "env" : {
     "es6": true,
-    "browser": true
-  },
-  "extends": "airbnb",
-  "rules": {
-    "no-console": 0,
-    "no-unused-vars": 1
-  },
-  "plugins": ["html", "markdown"]
+    "browser": true,
+    "node": true,
+    "jquery": true
+    },
+    "extends": "eslint:recommended"
 }
