--- a/12 - Code Quality with ESLint/.eslintrc
+++ b/12 - Code Quality with ESLint/.eslintrc
@@ -5,5 +5,8 @@
     "node": true,
     "jquery": true
     },
-    "extends": "eslint:recommended"
+    "extends": "airbnb",
+    "rules" : {
+      "no-console": 0
+      }
 }
